[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/game/white.png" type="Texture" id=1]
[ext_resource path="res://resources/scenes/Select/CenterBar.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/ostrich-sans/OstrichSans-Medium.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/ostrich-sans/OstrichSans-Black.otf" type="DynamicFontData" id=4]
[ext_resource path="res://resources/scenes/Select/Select.gd" type="Script" id=5]
[ext_resource path="res://resources/scenes/Select/PreviewStage.gd" type="Script" id=6]

[sub_resource type="Shader" id=31]
code = "shader_type canvas_item;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	float uvx = UV.x * 720.0;
	float uvy = UV.y * 720.0;
	float sum = (720.0 - uvy) + uvx;
	if (sum < 360.0) {
		COLOR = vec4(0,0,0,0)
	} else {
		COLOR = color
	}
}"

[sub_resource type="ShaderMaterial" id=26]
shader = SubResource( 31 )

[sub_resource type="DynamicFont" id=27]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=28]
size = 36
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=29]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=30]
size = 24
font_data = ExtResource( 4 )

[node name="Select" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backdrop" type="Sprite" parent="."]
modulate = Color( 0.113725, 0.109804, 0.137255, 1 )
material = SubResource( 26 )
position = Vector2( 920, 360 )
scale = Vector2( 720, 720 )
z_index = 1
texture = ExtResource( 1 )

[node name="CenterBar" type="Node2D" parent="."]
z_index = 3

[node name="BackBar" type="Control" parent="CenterBar"]
modulate = Color( 0.866667, 0.866667, 0.866667, 1 )
margin_left = -16.0
margin_top = -16.0
margin_right = 1264.0
margin_bottom = 704.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterBar" type="Control" parent="CenterBar"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SongInfo" type="Node2D" parent="."]
z_index = 5

[node name="SongName" type="Label" parent="SongInfo"]
margin_left = 704.0
margin_top = 16.0
margin_right = 1264.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 27 )
text = "No songs installed!"
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArtistName" type="Label" parent="SongInfo"]
margin_left = 768.0
margin_top = 64.0
margin_right = 1264.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 28 )
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="SongInfo"]
margin_left = 784.0
margin_top = 104.0
margin_right = 1264.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 29 )
custom_colors/font_color = Color( 1, 1, 1, 0.501961 )
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scores" type="Label" parent="SongInfo"]
margin_left = 784.0
margin_top = 144.0
margin_right = 1264.0
margin_bottom = 624.0
custom_fonts/font = SubResource( 30 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroller" type="Node2D" parent="."]
position = Vector2( 640, 360 )
z_index = 4

[node name="Tween" type="Tween" parent="."]

[node name="Viewport" type="ViewportContainer" parent="."]
margin_left = -560.0
margin_right = 720.0
margin_bottom = 720.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubViewport" type="Viewport" parent="Viewport"]
size = Vector2( 1280, 720 )
handle_input_locally = false
render_target_update_mode = 3
script = ExtResource( 6 )
